<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_4sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="15dp"
        app:cardElevation="@dimen/_5sdp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/title_background"
                android:backgroundTint="@color/color1"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/add_note"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:hint="@string/note_title"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/mainColor"
                app:startIconTint="@color/mainColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:hint="@string/note_description"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/mainColor"
                app:startIconTint="@color/mainColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputNoteDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <!-- Radio buttons for color selection -->
                <RadioGroup
                    android:id="@+id/colorRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RB_Color1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/color_1" />

                    <RadioButton
                        android:id="@+id/RB_Color2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/color_2" />

                    <RadioButton
                        android:id="@+id/RB_Color3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/color_3" />

                    <RadioButton
                        android:id="@+id/RB_Color4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/color_4" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>