<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:padding="@dimen/_10sdp"
    tools:context=".Auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo_sticky_notes"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp"
            tools:ignore="MissingConstraints">

            <ProgressBar
                android:id="@+id/progressCircle"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progress"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:hint="@string/user_name"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/mainColor"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/mainColor"
                    app:startIconDrawable="@drawable/round_email_24"
                    app:startIconTint="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/mainColor"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/mainColor"
                    app:passwordToggleContentDescription="Enter The Correct Password"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/mainColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_have_account_login"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    </LinearLayout>
</ScrollView>